--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
     "name": "my-ts-project",
     "version": "1.0.0",
+    "description": "A simple TypeScript starter project for learning and experimentation",
     "main": "dist/index.js",
     "type": "module",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/devcronberg/my-ts-project"
+    },
+    "bugs": {
+        "url": "https://github.com/devcronberg/my-ts-project/issues"
+    },
+    "homepage": "https://github.com/devcronberg/my-ts-project#readme",
     "scripts": {
         "build": "tsc",
         "watch": "tsc --watch",
@@ -15,7 +24,6 @@
     "keywords": [],
     "author": "",
     "license": "ISC",
-    "description": "",
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^8.46.3",
         "@typescript-eslint/parser": "^8.46.3",
