--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "watch": "tsc --watch",
         "start": "node dist/index.js",
         "dev": "tsc && node dist/index.js",
+        "test": "tsc && node --test dist/**/*.test.js",
         "lint": "eslint src/**/*.ts",
         "lint:fix": "eslint src/**/*.ts --fix",
         "format": "prettier --write \"src/**/*.ts\""
@@ -25,10 +26,12 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/node": "^24.10.1",
         "@typescript-eslint/eslint-plugin": "^8.46.3",
         "@typescript-eslint/parser": "^8.46.3",
         "eslint": "^9.39.1",
         "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-sonarjs": "^3.0.5",
         "prettier": "^3.6.2",
         "typescript": "^5.9.3"
     },
